2007-06-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fix for the uid of POP summary items
	* Some bugfixing for finding messages

2007-06-13  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-msg.c: (_tny_camel_msg_set_folder),
	(tny_camel_msg_finalize): Take and release a reference, to avoid 
	crashes.

2007-06-13  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-account.c:
	(tny_camel_account_matches_url_string_default):
	Actually set the in variable so that the comparison actually happens.
	* libtinymail-camel/tny-camel-folder.c:
	(tny_camel_folder_find_msg_default): Skip over the / before, not after 
	checking for / at the start. Do a g_warning() if the format is false, 
	to help debugging.

2007-06-13  Antia Puentes Felpeto  <apuentes@igalia.com>
	
	* Added a test in tests/functional that tests removing folders

2007-06-13  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-folder.c:
	(tny_camel_folder_get_url_string_default):
	* libtinymail/tny-folder.c:
	* libtinymail/tny-store-account.c: Added documentation and comments 
	about the url-string. Note that Philip fixed 
	tny_folder_get_url_string_default() in a previous commit.

2007-06-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* Added some extra locking into the camel-lite's POP3 code

2007-06-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* Added placeholder for future libtinymail-tp
	* This is unfinished material (don't yet use it)

2007-06-12  Philip Van Hoof  <pvanhoof@gnome.org>

	* Improved the tny_folder_poke_status implementation of TnyCamelFolder
	(performance improvement, made it internally async)
	* Experimental caching of root folder list
	* Added some locking in the CamelPOP3Store and folder

2007-06-12  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail/tny-enums.h: Resynced the fake TnyFolderType enum values 
	from tnyfolder.h and added comments explaining why we have these fake 